--- a/app/templates/partials/navbar.html
+++ b/app/templates/partials/navbar.html
@@ -11,7 +11,7 @@
           <!-- end: RESPONSIVE MENU TOGGLER -->
           <!-- start: LOGO -->
           <a class="navbar-brand" href="{{ url_for('static.index') }}">
-            Tron Logistics
+           Tron Logistics{#<img src="{{ static('backend/images/logo_s.png') }}"></img>#}
           </a>
           <!-- end: LOGO -->
         </div>
