--- a/app/templates/layout_map.html
+++ b/app/templates/layout_map.html
@@ -2,7 +2,7 @@
 {% block body %}
 
 
-{% if user.is_authenticated() %}
+{% if user.is_authenticated() and user.password is not none %}
 	{% include "partials/navbar.html" %}
 	<!-- start: MAIN CONTAINER -->
 		<div class="main-container">
@@ -12,22 +12,25 @@
 				<div class="container">
 					{% include "partials/page_header.html" %}
 
+					{% with messages = get_flashed_messages() %}
+						{% if messages %}
+					    	{% for message in messages %}
+					    		<div class="alert alert-warning" role="alert">{{ message }}</div>
+					    	{% endfor %}
+					  	{% endif %}
+					{% endwith %}
 					{% block content %}{% endblock %}
-					
+				</div>
+			</div>
+		</div>
 {% else %}
 	{% block login %}{% endblock %}
 {% endif %}
 
-{#{% with messages = get_flashed_messages() %}
-	{% if messages %}
-    	{% for message in messages %}
-    		<div class="alert alert-warning" role="alert">{{ message }}</div>
-    	{% endfor %}
-  	{% endif %}
-{% endwith %}
-{% block content %}{% endblock %}#}
 
-		<!-- start: MAIN JAVASCRIPTS -->
+
+
+		{#<!-- start: MAIN JAVASCRIPTS -->
 		<!--[if lt IE 9]>
 		<script src="{{ static('backend/plugins/respond.min.js') }}"></script>
 		<script src="{{ static('backend/plugins/excanvas.min.js') }}"></script>
@@ -46,7 +49,7 @@
 		<script src="{{ static('backend/plugins/less/less-1.5.0.min.js') }}"></script>
 		<script src="{{ static('backend/plugins/jquery-cookie/jquery.cookie.js') }}"></script>
 		<script src="{{ static('backend/plugins/bootstrap-colorpalette/js/bootstrap-colorpalette.js') }}"></script>
-		<script src="{{ static('backend/js/main.js') }}"></script>
+		<script src="{{ static('backend/js/main.js') }}"></script>#}
 		<!-- end: MAIN JAVASCRIPTS -->
 		<!-- start: JAVASCRIPTS REQUIRED FOR THIS PAGE ONLY -->
 		<script src="{{ static('backend/plugins/flot/jquery.flot.js') }}"></script>
@@ -57,12 +60,21 @@
 		<script src="{{ static('backend/plugins/jquery-ui-touch-punch/jquery.ui.touch-punch.min.js') }}"></script>
 		<script src="{{ static('backend/plugins/fullcalendar/fullcalendar/fullcalendar.js') }}"></script>
 		<script src="{{ static('backend/js/index.js') }}"></script>
+		<script type="text/javascript" src="{{ static('backend/plugins/jquery-mockjax/jquery.mockjax.js') }}"></script>
+		<script type="text/javascript" src="{{ static('backend/plugins/select2/select2.min.js') }}"></script>
+		<script type="text/javascript" src="{{ static('backend/plugins/DataTables/media/js/jquery.dataTables.min.js') }}"></script>
+		<script src="{{ static('backend/js/table-data.js') }}"></script>
+		<!--<script src="{{ static('backend/js/form-elements.js') }}"></script>-->
+
+        <script>
+            jQuery(document).ready(function() {
+                Main.init();
+                //FormElements.init();
+                FormWizard.init();
+                TableData.init();
+                UIModals.init();
+            });
+        </script>
 		<!-- end: JAVASCRIPTS REQUIRED FOR THIS PAGE ONLY -->
-		<script>
-			jQuery(document).ready(function() {
-				Main.init();
-				Index.init();
-			});
-		</script>
 
 {% endblock %}
