--- a/app/templates/load/create.html
+++ b/app/templates/load/create.html
@@ -3,150 +3,191 @@
 {% block content %}
 <form name="create" action="" role="form" class="smart-wizard form-horizontal" id="form" method="post">
 	{{ form.hidden_tag() }}
-	<!-- start: PAGE CONTENT -->
-	<div class="row" id="form-container">
-		<div class="col-sm-12">
-					<div class="row">
-						<div class="col-sm-10">
-							<div class="form-group">
-								<label class="col-sm-3 control-label">
-									Load Type <span class="symbol required"></span>
-								</label>
-								<div class="col-sm-7">
-									{{ form.load_type(class="form-control") }}
-								</div>
-							</div>
-							<div class="form-group">
-								<label class="col-sm-3 control-label">
-									Required Trailer <span class="symbol required"></span>
-								</label>
-								<div class="col-sm-7">
-									{{ form.trailer_type(class="form-control") }}
-								</div>
-							</div>
-							<div class="form-group">
-								<label class="col-sm-3 control-label">
-									Total Miles <span class="symbol required"></span>
-								</label>
-								<div class="col-sm-7">
-									{{ form.total_miles(class="form-control", placeholder="Total Miles") }}
-								</div>
-							</div>
-							<div class="form-group">
-								<label class="col-sm-3 control-label">
-									Cost <span class="symbol required"></span>
-								</label>
-								<div class="col-sm-7">
-									{{ form.price(class="form-control", placeholder="Price") }}
-								</div>
-							</div>
+	<div id="form-container">
+		<!-- start: PAGE CONTENT -->
+			<div class="row">
+				<div class="col-sm-6">
+					<div class="panel panel-default">
+						<div class="panel-heading">
+							<i class="fa fa-external-link-square"></i>
+							Shipper
 						</div>
-						{#<div class="col-sm-5">
-							<div class="form-group">
-								<label class="col-sm-3 control-label">
-									# Pieces <span class="symbol required"></span>
-								</label>
-								<div class="col-sm-7">
-									{{ form.number_pieces(class="form-control", placeholder="Number of Pieces") }}
-								</div>
-							</div>
-							<div class="form-group">
-								<label class="col-sm-3 control-label">
-									Over Dimensional? 
-								</label>
-								<div class="col-sm-7">
-									{{ form.over_dimensional() }}
-								</div>
-							</div>
-							<div class="form-group">
-								<label class="col-sm-3 control-label">
-									Comments <span class="symbol required"></span>
-								</label>
-								<div class="col-sm-7">
-									{{ form.comments(class="form-control", placeholder="Number of Pieces") }}
-								</div>
-							</div>
-						</div>#}
-					</div>
-					<hr>
-					<div class="row">
-						<div class="col-sm-10">
-							<div class="form-group">
-								<label class="col-sm-3 control-label">
-									Load Description
-								</label>
-								<div class="col-sm-7">
-									{{ form.description(class="autosize form-control", style="overflow: hidden; word-wrap: break-word; resize: horizontal; height: 69px;") }}
-								</div>
-							</div>
-						</div>
-					</div>
-					<hr>
-					<div class="row">
-						<div class="col-md-12">
-							<div class="panel panel-default">
-								<div class="panel-heading">
-									<i class="fa fa-external-link-square"></i>
-									Locations
-									<div class="panel-tools">
-										<a class="btn btn-xs btn-link panel-collapse collapses" href="#"> </a>
-										<a class="btn btn-xs btn-link panel-config" href="#panel-config" data-toggle="modal"> <i class="fa fa-wrench"></i> </a>
-										<a class="btn btn-xs btn-link panel-refresh" href="#"> <i class="fa fa-refresh"></i> </a>
-										<a class="btn btn-xs btn-link panel-expand" href="#"> <i class="fa fa-resize-full"></i> </a>
-										<a class="btn btn-xs btn-link panel-close" href="#"> <i class="fa fa-times"></i> </a>
+						<div class="panel-body">
+							<div class="col-sm-10">
+								<div class="form-group">
+									<label class="col-sm-4 control-label">
+										Company Name
+									</label>
+									<div class="col-sm-7">
+										{{ form.shipper.company_name(class="form-control", placeholder="Company Name") }}
 									</div>
 								</div>
-								<div class="panel-body">
-									<div class="row">
-										<div class="col-md-12 space20">
-											<a href="#responsive-1" data-toggle="modal" class="new-modal btn btn-green">
-														Add New <i class="fa fa-plus"></i>
-													</a>
-										</div>
-									</div>
-									<div class="table-responsive">
-										<table class="table table-striped table-hover" id="sample_2">
-											<thead>
-												<tr>
-													<th>Stop #</th>
-													<th>Street Address</th>
-													<th>City</th>
-													<th>State</th>
-													<th>Zip</th>
-													<th>Pickup Weight</th>
-													<th>Delivery Weight</th>
-													<th>Arrival Date</th>
-													{#<th>Arrival Time</th>#}
-													<th>Delete</th>
-												</tr>
-											</thead>
-											<tbody>
-												<!--- Content created by table-data.js -->
-											</tbody>
-										</table>
+								<div class="form-group">
+									<label class="col-sm-4 control-label">
+										Phone
+									</label>
+									<div class="col-sm-7">
+										{{ form.shipper.phone(class="form-control", placeholder="Phone") }}
 									</div>
 								</div>
-							</div>
-
-						</div>
-						<hr>
-						<div class="form-group">
-							<div class="col-sm-2 col-sm-offset-3">
-								<button class="btn btn-light-grey back-step btn-block">
-									<i class="fa fa-circle-arrow-left"></i> Back
-								</button>
-							</div>
-							<div class="col-sm-2 col-sm-offset-3">
-								<button type="submit" class="btn btn-success btn-block">
-									Finish <i class="fa fa-arrow-circle-right"></i>
-								</button>
+								<div class="form-group">
+									<label class="col-sm-4 control-label">
+										Email
+									</label>
+									<div class="col-sm-7">
+										{{ form.shipper.email(class="form-control", placeholder="Email") }}
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-			
+				<div class="col-sm-6">
+					<div class="panel panel-default">
+						<div class="panel-heading">
+							<i class="fa fa-external-link-square"></i>
+							Broker
+						</div>
+						<div class="panel-body">
+							<div class="col-sm-10">
+								<div class="form-group">
+									<label class="col-sm-4 control-label">
+										Company Name
+									</label>
+									<div class="col-sm-7">
+										{{ form.broker.company_name(class="form-control", placeholder="Company Name") }}
+									</div>
+								</div>
+								<div class="form-group">
+									<label class="col-sm-4 control-label">
+										Phone
+									</label>
+									<div class="col-sm-7">
+										{{ form.broker.phone(class="form-control", placeholder="Phone") }}
+									</div>
+								</div>
+								<div class="form-group">
+									<label class="col-sm-4 control-label">
+										Email
+									</label>
+									<div class="col-sm-7">
+										{{ form.broker.email(class="form-control", placeholder="Email") }}
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-12">
+					<div class="panel panel-default">
+						<div class="panel-heading">
+							<i class="fa fa-external-link-square"></i>
+							General
+						</div>
+						<div class="panel-body">
+							<div class="col-sm-10">
+								<div class="form-group">
+									<label class="col-sm-3 control-label">
+										Load Type <span class="symbol required"></span>
+									</label>
+									<div class="col-sm-7">
+										{{ form.load_type(class="form-control") }}
+									</div>
+								</div>
+								<div class="form-group">
+									<label class="col-sm-3 control-label">
+										Required Trailer <span class="symbol required"></span>
+									</label>
+									<div class="col-sm-7">
+										{{ form.trailer_type(class="form-control") }}
+									</div>
+								</div>
+								<div class="form-group">
+									<label class="col-sm-3 control-label">
+										Total Miles <span class="symbol required"></span>
+									</label>
+									<div class="col-sm-7">
+										{{ form.total_miles(class="form-control", placeholder="Total Miles") }}
+									</div>
+								</div>
+								<div class="form-group">
+									<label class="col-sm-3 control-label">
+										Cost <span class="symbol required"></span>
+									</label>
+									<div class="col-sm-7">
+										{{ form.price(class="form-control", placeholder="Price") }}
+									</div>
+								</div>
+								<hr>
+								<div class="form-group">
+									<label class="col-sm-3 control-label">
+										Load Description
+									</label>
+									<div class="col-sm-7">
+										{{ form.description(class="autosize form-control", style="overflow: none; word-wrap: break-word; resize: horizontal; height: 69px;") }}
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-12">
+					<div class="panel panel-default">
+						<div class="panel-heading">
+							<i class="fa fa-external-link-square"></i>
+							Locations
+						</div>
+						<div class="panel-body">
+							<div class="row">
+								<div class="col-md-12 space20">
+									<a href="#responsive-1" data-toggle="modal" class="new-modal btn btn-green">
+												Add New <i class="fa fa-plus"></i>
+											</a>
+								</div>
+							</div>
+							<div class="table-responsive">
+								<table class="table table-striped table-hover" id="sample_2">
+									<thead>
+										<tr>
+											<th>Stop #</th>
+											<th>Street Address</th>
+											<th>City</th>
+											<th>State</th>
+											<th>Zip</th>
+											<th>Arrival Date</th>
+											{#<th>Arrival Time</th>#}
+											<th>Delete</th>
+										</tr>
+									</thead>
+									<tbody>
+										<!--- Content created by table-data.js -->
+									</tbody>
+								</table>
+							</div>
+						</div>
+					</div>
+
+				</div>
+				<hr>
+				<div class="form-group">
+					<div class="col-sm-2 col-sm-offset-3">
+						<button class="btn btn-light-grey back-step btn-block">
+							<i class="fa fa-circle-arrow-left"></i> Back
+						</button>
+					</div>
+					<div class="col-sm-2 col-sm-offset-3">
+						<button type="submit" class="btn btn-success btn-block">
+							Finish <i class="fa fa-arrow-circle-right"></i>
+						</button>
+					</div>
+				</div>
+			</div>
 		</div>
-	</div>
+
 </form>
 		<!-- end: RIGHT SIDEBAR -->
 		{% include "partials/main_javascripts.html" %}
@@ -216,8 +257,6 @@
 		         	$('#locations-' + count + '-city').val(),
 		        	$('#locations-' + count + '-state').val(),
 		        	$('#locations-' + count + '-postal_code').val(),
-		        	$('#locations-' + count + '-pickup_weight').val(),
-		        	$('#locations-' + count + '-delivery_weight').val(),
 		        	$('#locations-' + count + '-arrival_date').val(),
 		        	'<a class=\"edit-modal\" href=\"#responsive-' + ($('#sample_2').dataTable().fnSettings().aoData.length + 1) + '\" data-toggle=\"modal\">Edit<\/a>/<a class=\"delete-row\" href=\"\">Delete<\/a>' ]
 		        );
@@ -237,8 +276,6 @@
 		         	$('#locations-' + modal_id + '-city').val(),
 		        	$('#locations-' + modal_id + '-state').val(),
 		        	$('#locations-' + modal_id + '-postal_code').val(),
-		        	$('#locations-' + modal_id + '-pickup_weight').val(),
-		        	$('#locations-' + modal_id + '-delivery_weight').val(),
 		        	$('#locations-' + modal_id + '-arrival_date').val(),
 		        	'<a class=\"edit-modal\" href=\"#responsive-' + modal_id + '\" data-toggle=\"modal\">Edit<\/a>/<a class=\"delete-row\" href=\"\">Delete<\/a>'
 		        	], $('td').filter(function() {
@@ -246,12 +283,36 @@
 						}).closest('tr').index());
 			}); 
 
+			$( document).on("change", ".location-type", function() {
+				if ($(this).val() == "Pickup") {
+					$('#pickup-' + $(this).attr("id").match(/\d+/)).css("display", "");
+					$('#delivery-' + $(this).attr("id").match(/\d+/)).css("display", "none");
+					$('#locations-' + $(this).attr("id").match(/\d+/) +'-delivery_weight').val("");
+					$('#locations-' + $(this).attr("id").match(/\d+/) +'-delivery_notes').val("");
+				} else if ($(this).val() == "Drop Off") {
+					$('#pickup-' + $(this).attr("id").match(/\d+/)).css("display", "none");
+					$('#locations-' + $(this).attr("id").match(/\d+/) +'-pickup_weight').val("");
+					$('#locations-' + $(this).attr("id").match(/\d+/) +'-pickup_notes').val("");
+					$('#delivery-' + $(this).attr("id").match(/\d+/)).css("display", "");
+				} else if ($(this).val() == "Both") {
+					$('#pickup-' + $(this).attr("id").match(/\d+/)).css("display", "");
+					$('#delivery-' + $(this).attr("id").match(/\d+/)).css("display", "");
+				} else {
+					$('#pickup-' + $(this).attr("id").match(/\d+/)).css("display", "none");
+					$('#locations-' + $(this).attr("id").match(/\d+/) +'-pickup_weight').val("");
+					$('#locations-' + $(this).attr("id").match(/\d+/) +'-pickup_notes').val("");
+					$('#delivery-' + $(this).attr("id").match(/\d+/)).css("display", "none");
+					$('#locations-' + $(this).attr("id").match(/\d+/) +'-delivery_weight').val("");
+					$('#locations-' + $(this).attr("id").match(/\d+/) +'-delivery_notes').val("");
+				}
+			});
+
 			function create_modal(index){
 			    
 			    var modal = '<div id=\"responsive-' + index + '\" class=\"modal fade\" tabindex=\"-1\" data-width=\"840\" style=\"display: none;\">' +
 			   				' <p style=\"display:none;\" class=\"modal-id\">' + index + '<\/p>' + 
 							'	<div class=\"modal-header\" id=\"modal-header\">' +
-							'		<button type=\"button\" class=\"close\" data-dismiss=\"modal\" aria-hidden=\"true\">' +
+							'		<button type=\"button\" class=\"close\" data-dismiss=\"modal\" aria-none=\"true\">' +
 							'			&times;' +
 							'		<\/button>' +
 							'		<h4 class=\"modal-title\">Add Location<\/h4>' +
@@ -268,7 +329,20 @@
 							'						<div class=\"col-md-12\">' +
 							'							<h4>General<\/h4>' +
 							'							<hr>' +
-							'							<input type=\"hidden\" id=\"locations-' + index + '-retired\" name=\"locations-' + index + '-retired\" class=\"form-control\" value=\"'+index+'\">' +
+							'							<input type=\"none\" id=\"locations-' + index + '-retired\" name=\"locations-' + index + '-retired\" class=\"form-control\" value=\"'+index+'\">' +
+							'							<div class=\"form-group\">' +
+							'								<label class=\"col-sm-3 control-label\">' +
+							'									Type <span class=\"symbol required\"><\/span>' +
+							'								<\/label>' +
+							'								<div class=\"col-sm-7\">' +
+							'									<select id=\"locations-' + index + '-stop_type\" name=\"locations-' + index + '-stop_type\" class=\"form-control location-type\" value=\"\">' +
+							'										<option value=\"<none selected>\"><\/option>' +
+							'										<option value=\"Pickup\">Pickup<\/option>' +
+							'										<option value=\"Drop Off\">Drop Off<\/option>' +
+							'										<option value=\"Both\">Both<\/option>' +
+							'									<\/select>' +
+							'								<\/div>' +
+							'							<\/div>' +
 							'							<div class=\"form-group\">' +
 							'								<label class=\"col-sm-3 control-label\">' +
 							'									Address <span class=\"symbol required\"><\/span>' +
@@ -314,7 +388,7 @@
 							'					<div class=\"row\"><hr><\/div>' +
 							'					<div class=\"row\">' +
 							'						<div class=\"col-md-12\">' +
-							'							<h4>Receiver<\/h4>' +
+							'							<h4>Contact<\/h4>' +
 							'							<hr>' +
 							'							<div class=\"form-group\">' +
 							'								<label class=\"col-sm-3 control-label\">' +
@@ -335,8 +409,8 @@
 							'						<\/div>' +
 							'					<\/div>' +
 							'					<div class=\"row\"><hr><\/div>' +
-							'					<div class=\"row\">' +
-							'						<div class=\"col-md-6\">' +
+							'					<div class=\"row\" id=\"pickup-' + index + '\" style=\"display:none;\">' +
+							'						<div class=\"col-md-12\">' +
 							'							<h4>Pickup<\/h4>' +
 							'							<hr>' +
 							'							<div class=\"form-group\">' +
@@ -347,8 +421,18 @@
 							'									<input type=\"text\" id=\"locations-' + index + '-pickup_weight\" name=\"locations-' + index + '-pickup_weight\" class=\"form-control\">' +
 							'								<\/div>' +
 							'							<\/div>' +
+							'							<div class=\"form-group\">' +
+							'								<label class=\"col-sm-3 control-label\">' +
+							'									Notes' +
+							'								<\/label>' +
+							'								<div class=\"col-sm-7\">' +
+							'									<textarea class=\"autosize form-control\" id=\"locations-' + index + '-pickup_notes\" name=\"locations-' + index + '-pickup_notes\" style=\"overflow: none; word-wrap: break-word; resize: horizontal; height: 69px;\"><\/textarea>' +
+							'								<\/div>' +
+							'							<\/div>' +
 							'						<\/div>' +
-							'						<div class=\"col-md-6\">' +
+							'					<\/div>' +
+							'					<div class=\"row\" id=\"delivery-' + index + '\" style=\"display:none;\">' +
+							'						<div class=\"col-md-12\">' +
 							'							<h4>Delivery<\/h4>' +
 							'							<hr>' +
 							'							<div class=\"form-group\">' +
@@ -359,6 +443,14 @@
 							'									<input type=\"text\" id=\"locations-' + index + '-delivery_weight\" name=\"locations-' + index + '-delivery_weight\" class=\"form-control\">' +
 							'								<\/div>' +
 							'							<\/div>' +
+							'							<div class=\"form-group\">' +
+							'								<label class=\"col-sm-3 control-label\">' +
+							'									Notes' +
+							'								<\/label>' +
+							'								<div class=\"col-sm-7\">' +
+							'									<textarea class=\"autosize form-control\" id=\"locations-' + index + '-delivery_notes\" name=\"locations-' + index + '-pickup_notes\" style=\"overflow: none; word-wrap: break-word; resize: horizontal; height: 69px;\"><\/textarea>' +
+							'								<\/div>' +
+							'							<\/div>' +
 							'						<\/div>' +
 							'					<\/div>' +
 							'				<\/div>' +
@@ -366,7 +458,7 @@
 							'		<\/div>' +
 							'	<\/div>' +
 							'	<div class=\"modal-footer\">' +
-							'   <input type=\"hidden\" id=\"locations-' + ($('#sample_2').dataTable().fnSettings().aoData.length + 1) + '-stop_number\" name=\"locations-' + ($('#sample_2').dataTable().fnSettings().aoData.length + 1) + '-stop_number\" class=\"form-control stop-number\" value=\"' + ($('#sample_2').dataTable().fnSettings().aoData.length + 1) + '\">' +
+							'   <input type=\"none\" id=\"locations-' + ($('#sample_2').dataTable().fnSettings().aoData.length + 1) + '-stop_number\" name=\"locations-' + ($('#sample_2').dataTable().fnSettings().aoData.length + 1) + '-stop_number\" class=\"form-control stop-number\" value=\"' + ($('#sample_2').dataTable().fnSettings().aoData.length + 1) + '\">' +
 							'		<button type=\"button\" data-dismiss=\"modal\" class=\"btn btn-light-grey\">' +
 							'			Close' +
 							'		<\/button>' +
