--- a/app/templates/partials/page_header.html
+++ b/app/templates/partials/page_header.html
@@ -1,8 +1,9 @@
 <!-- start: PAGE HEADER -->
+
 					<div class="row">
 						<div class="col-sm-12">
 							<!-- start: PAGE TITLE & BREADCRUMB -->
-							<ol class="breadcrumb">
+							{#<ol class="breadcrumb">
 								<li>
 									<i class="clip-home-3"></i>
 									<a href="#">
@@ -22,7 +23,7 @@
 										</div>
 									</form>
 								</li>
-							</ol>
+							</ol>#}
 							<div class="page-header">
 								<h1>{{ title }}</h1>
 							</div>
