--- a/app/templates/partials/sidebar.html
+++ b/app/templates/partials/sidebar.html
@@ -2,18 +2,13 @@
                 <!-- start: SIDEBAR -->
                 <div class="main-navigation navbar-collapse collapse">
                     <!-- start: MAIN MENU TOGGLER BUTTON -->
-                    <div class="navigation-toggler">
+                    {#<div class="navigation-toggler">
                         <i class="clip-chevron-left"></i>
                         <i class="clip-chevron-right"></i>
-                    </div>
+                    </div>#}
                     <!-- end: MAIN MENU TOGGLER BUTTON -->
                     <!-- start: MAIN NAVIGATION MENU -->
                     <ul class="main-navigation-menu">
-                        <li {% if active == "Dashboard" %}class="active open" {% endif%}>
-                            <a href="index.html"><i class="clip-home-3"></i>
-                                <span class="title"> Dashboard </span><span class="selected"></span>
-                            </a>
-                        </li>
                         <li {% if active == "Loads" %}class="active open" {% endif%}>
                             <a href="javascript:void(0)"><i class="fa fa-money"></i>
                                 <span class="title"> Loads </span><i class="icon-arrow"></i>
